Ensure text remains visible during webfont load

--- a/src/sass/icon-font.css
+++ b/src/sass/icon-font.css
@@ -9,7 +9,7 @@
     url("fonts/linea-basic-10.svg#linea-basic-10") format("svg");
   font-weight: normal;
   font-style: normal;
-
+  font-display: swap; /* Ensure text remains visible during webfont load */ 
 }
 
 [data-icon]:before {
